--- a/SoftUni HTML & CSS/Flexbox/Resources/expandable-tree-view.html
+++ b/SoftUni HTML & CSS/Flexbox/Resources/expandable-tree-view.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tree view</title>
-    <link rel="stylesheet" href="tree-view.css">
+    <title>Expandable Tree View</title>
+    <link rel="stylesheet" href="expandable-tree-view.css">
 </head>
 <body>
     
